--- a/.github/workflows/macos-deploy.yml
+++ b/.github/workflows/macos-deploy.yml
@@ -10,7 +10,7 @@ on:
 
 jobs:
   build:
-    runs-on: macos-latest
+    runs-on: macos-12
     
     steps:
     - uses: actions/checkout@v4
@@ -64,7 +64,7 @@ jobs:
             <key>NSHighResolutionCapable</key>
             <true/>
             <key>LSMinimumSystemVersion</key>
-            <string>10.15</string>
+            <string>12.0</string>
         </dict>
         </plist>
         EOF
