--- a/.github/workflows/macos-deploy.yml
+++ b/.github/workflows/macos-deploy.yml
@@ -2,11 +2,8 @@ name: macOS Build and Deploy
 
 on:
   push:
-    branches: [ master ]
     tags:
       - 'v*'
-  pull_request:
-    branches: [ master ]
 
 jobs:
   build:
@@ -69,8 +66,39 @@ jobs:
         </plist>
         EOF
         
-        # Use macdeployqt to bundle Qt libraries
-        $(brew --prefix qt6)/bin/macdeployqt "LCD GUI Tester.app"
+        # Use macdeployqt to bundle Qt libraries with verbose output and all modules
+        $(brew --prefix qt6)/bin/macdeployqt "LCD GUI Tester.app" -verbose=2 -always-overwrite
+        
+        # Run macdeployqt a second time to catch any missed dependencies
+        $(brew --prefix qt6)/bin/macdeployqt "LCD GUI Tester.app" -verbose=2
+        
+        # Manually ensure QtDBus framework is included since it's often missed
+        QT_LIB_PATH=$(brew --prefix qt6)/lib
+        APP_FRAMEWORKS="LCD GUI Tester.app/Contents/Frameworks"
+        
+        # List of Qt frameworks that might be missed by macdeployqt
+        MISSING_FRAMEWORKS=("QtDBus")
+        
+        for framework in "${MISSING_FRAMEWORKS[@]}"; do
+          if [[ -d "$QT_LIB_PATH/${framework}.framework" ]] && [[ ! -d "$APP_FRAMEWORKS/${framework}.framework" ]]; then
+            echo "Copying missing ${framework} framework..."
+            cp -R "$QT_LIB_PATH/${framework}.framework" "$APP_FRAMEWORKS/"
+            
+            # Fix the framework's install name
+            install_name_tool -id "@rpath/${framework}.framework/Versions/A/${framework}" \
+              "$APP_FRAMEWORKS/${framework}.framework/Versions/A/${framework}"
+              
+            # Update any references in the main executable
+            install_name_tool -change \
+              "$QT_LIB_PATH/${framework}.framework/Versions/A/${framework}" \
+              "@rpath/${framework}.framework/Versions/A/${framework}" \
+              "LCD GUI Tester.app/Contents/MacOS/lcd-gui-tester"
+          fi
+        done
+        
+        # Verify all Qt dependencies are properly linked
+        echo "Checking Qt dependencies in the final app..."
+        otool -L "LCD GUI Tester.app/Contents/MacOS/lcd-gui-tester"
         
         # Create DMG
         hdiutil create -volname "LCD GUI Tester" -srcfolder "LCD GUI Tester.app" -ov -format UDZO lcd-gui-tester-macos.dmg
