Enhance deployment workflows for Ubuntu and Windows. Add copying of LVGL libraries and MCU scripts in Ubuntu deploy. Update Windows deploy to use Ninja for CMake configuration.

--- a/.github/workflows/windows-deploy.yml
+++ b/.github/workflows/windows-deploy.yml
@@ -27,8 +27,11 @@ jobs:
       with:
         arch: x64
 
+    - name: Install Ninja
+      run: choco install ninja
+
     - name: Configure CMake
-      run: cmake -B build -DCMAKE_BUILD_TYPE=Release -G "NMake Makefiles"
+      run: cmake -B build -DCMAKE_BUILD_TYPE=Release -G "Ninja"
 
     - name: Build
       run: cmake --build build --config Release
