Refactor file handling and extraction processes for improved reliability
- Update CMakeLists.txt to conditionally set WIN32_EXECUTABLE for Release builds.
- Enhance README.md with detailed CMake commands for Ninja generator.
- Modify configure.bat and configure.ps1 to always clean previous CMake cache.
- Introduce toolchain-arm-none-eabi.cmake for cross-compilation setup.
- Improve embeddedpython.cpp to handle file downloads and extractions more robustly.
- Refactor librarychecker.cpp to avoid QTemporaryFile issues and ensure proper file handling during downloads and extractions.
- Add necessary includes in librarychecker.h for new functionalities.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -91,7 +91,10 @@ if(UNIX)
 endif()
 
 # For deployment
-set_target_properties(lcd-gui-tester PROPERTIES
-    WIN32_EXECUTABLE TRUE
-    MACOSX_BUNDLE TRUE
-)
+# Comment out WIN32_EXECUTABLE for Debug builds to see console output
+if(CMAKE_BUILD_TYPE STREQUAL "Release")
+    set_target_properties(lcd-gui-tester PROPERTIES
+        WIN32_EXECUTABLE TRUE
+        MACOSX_BUNDLE TRUE
+    )
+endif()
